@@ -13,7 +13,7 @@
 		<h1><{$smarty.const._CO_IMAUDIT_CHANGESET_CHANGESET}> <{$imaudit_changeset.changeset_number}></h1>
 		<div><{$imaudit_changeset.message}></div>
 		<div class="imaudit-changeset-footer">
-			<div<b><{$smarty.const._CO_IMAUDIT_CHANGESET_LINK}></b>: <a href="<{$imaudit_changeset.link}>"><{$imaudit_changeset.link}></a></div>
+			<div><b><{$smarty.const._CO_IMAUDIT_CHANGESET_LINK}></b>: <a href="<{$imaudit_changeset.link}>"><{$imaudit_changeset.link}></a></div>
 			<div><b><{$smarty.const._CO_IMAUDIT_CHANGESET_STATUS}></b>: <{$imaudit_changeset.status}></div>
 		</div>
 	</div>
