@@ -1,3 +1,9 @@
 <b><u>=> Unreleased: Version 1.0 Beta</u></b>
 
 - First public release of the module.
+
+Changelog 1.0 RC2
+May 2nd, 2009
+=============
+1	Fixed : Checked all the language constants whether they were used or not.
+					thanks to the language checker made by trabis. Credits : www.xuups.com (trabis)
